--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="registerLName">Last Name</string>
     <string name="registerEMail">Email Address</string>
     <string name="registerPassword">Password</string>
+    <string name="registerRePassword">Confirm Password</string>
     <string name="registerNextPage">Next Page</string>
     <string name="registerCancel">Cancel</string>
     <string name="registerLifeStyle">Life Style</string>
