--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="registerNextPage">Next Page</string>
     <string name="registerCancel">Cancel</string>
     <string name="registerLifeStyle">Life Style</string>
+    <string name="finishRegistration">Finish Registration</string>
+    <string name="cancel">Cancel</string>
 
     <string-array name="lifeStyles">
         <item>Adult</item>
