--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Budget Buddy</string>
     <string name="mainEmail">Email Address</string>
@@ -113,7 +114,7 @@
     <string name="fragWantsNetYearly">Net Yearly:</string>
     <string name="dataPopupType">Type of Purchase:</string>
     <string name="dataPopupAmount">Amount Spent:</string>
-    <string name="dataPopupMod">Modify</string>
+    <string name="dataPopupMod">Modify:</string>
     <string name="generalHome">Home</string>
     <string name="directoryMainDetails">Details Page</string>
     <string name="directoryEnterData">Enter Data</string>
@@ -173,5 +174,5 @@
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-</resources>
 
+</resources>
