--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -114,7 +114,7 @@
     <string name="fragWantsNetYearly">Net Yearly:</string>
     <string name="dataPopupType">Type of Purchase:</string>
     <string name="dataPopupAmount">Amount Spent:</string>
-    <string name="dataPopupMod">Modify:</string>
+    <string name="dataPopupMod">Modify</string>
     <string name="generalHome">Home</string>
     <string name="directoryMainDetails">Details Page</string>
     <string name="directoryEnterData">Enter Data</string>
